Gtk3Migr : css + StateFlag / Style
* Add css style definition
* Fix gtk_widget_set_state and gtk_widget_get_style depreciation

--- a/veejay-current/veejay-client/Makefile.am
+++ b/veejay-current/veejay-client/Makefile.am
@@ -51,10 +51,7 @@ EXTRA_DIST = \
  share/gveejay.glade \
  share/gveejay.rc \
  share/gveejay.reloaded.glade \
- share/gveejay.reloaded.glade.bak \
- share/gveejay.reloaded.gladep \
- share/gveejay.reloaded.gladep.bak \
- share/gveejay.reloaded.glade~ \
+ share/gveejay.reloaded.css \
  share/high_contrast.rc \
  share/icon_apply.png \
  share/icon_berserk.png \
